--- a/style.css
+++ b/style.css
@@ -1,27 +1,26 @@
 h2{
     color:orange;
 }
+
 body{
     background-color: #305050;
     color: white;
     font-family: Roboto;
     text-align: center;
 }
-header{ 
-    border-bottom: 1px solid grey; 
-}
-footer {
-    border-top: 1px solid grey; 
-}
-<h2>HTML</h2>
-<P><span class="texto-inglês">Hypertext Markup Language </span>(em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</P>
 
-<h2>CSS</h2>
-<P><span class="texto-inglês">Cascading Style Sheets </span>(em português, Folha de Estilo em Cascata) estiliza a sua página web</P>      
-#nome-usuário { 
-    font-weight: bold; 
- }
- texto-inglês { 
+header{
+    border-bottom: 1px solid grey;
+}
+
+footer{
+    border-top: 1px solid grey;
+}
+
+#nome-usuário{
+    font-weight: bold;
+}
+
+.texto-inglês{
     font-style: italic;
-  }
-  
+}
